# sonar_processing

./: CMakeLists.txt  README.md  manifest.xml
include/sonar_target_tracking/: TargetTrack.hpp
src/: BasicOperations.cpp  BasicOperations.hpp  CartesianSonarROIDetector.cpp  CartesianSonarROIDetector.hpp  Clustering.cpp  Clustering.hpp  Denoising.cpp  Denoising.hpp  Features.cpp  Features.hpp  Filtering.cpp  Filtering.hpp  FrequencyDomain.cpp  FrequencyDomain.hpp  HOGDetector.cpp  HOGDetector.hpp  HogDescriptorViz.cpp  HogDescriptorViz.hpp  ImageFiltering.cpp  ImageFiltering.hpp  ImageUtil.cpp  ImageUtil.hpp  ImageUtils.cpp  ImageUtils.hpp  LinearSVM.hpp  PolarCartesianScanner.cpp  PolarCartesianScanner.hpp  PolarSonarROIDetector.cpp  PolarSonarROIDetector.hpp  Preprocessing.cpp  Preprocessing.hpp  QualityMetrics.cpp  QualityMetrics.hpp  ROI.cpp  ROI.hpp  ScannerBase.hpp  ScanningHolder.cpp  ScanningHolder.hpp  ShapeProcessing.cpp  ShapeProcessing.hpp  (+9 more)
